*2.0.1* (December 7th, 2007)

* Don't cache net/http object so that ActiveResource is more thread-safe.  Closes #10142 [kou]

* Update XML documentation examples to include explicit type attributes. Closes #9754 [hasmanyjosh]

* Added one-off declarations of mock behavior [DHH]. Example:

    Before:
      ActiveResource::HttpMock.respond_to do |mock|
        mock.get "/people/1.xml", {}, "<person><name>David</name></person>"
      end
      
    Now:
      ActiveResource::HttpMock.respond_to.get "/people/1.xml", {}, "<person><name>David</name></person>"

* Added ActiveResource.format= which defaults to :xml but can also be set to :json [DHH]. Example:

    class Person < ActiveResource::Base
      self.site   = "http://app/"
      self.format = :json
    end
    
    person = Person.find(1) # => GET http://app/people/1.json
    person.name = "David"
    person.save             # => PUT http://app/people/1.json {name: "David"}
    
    Person.format = :xml
    person.name = "Mary"
    person.save             # => PUT http://app/people/1.json <person><name>Mary</name></person>    

* Fix reload error when path prefix is used.  #8727 [Ian Warshak]

* Remove ActiveResource::Struct because it hasn't proven very useful. Creating a new ActiveResource::Base subclass is often less code and always clearer.  #8612 [Josh Peek]

* Fix query methods on resources. [Cody Fauser]

* pass the prefix_options to the instantiated record when using find without a specific id. Closes #8544 [alloy]

* Recognize and raise an exception on 405 Method Not Allowed responses.  #7692 [Josh Peek]

* Handle string and symbol param keys when splitting params into prefix params and query params.

    Comment.find(:all, :params => { :article_id => 5, :page => 2 }) or Comment.find(:all, :params => { 'article_id' => 5, :page => 2 })

* Added find-one with symbol [DHH]. Example: Person.find(:one, :from => :leader) # => GET /people/leader.xml
