@@ -1,3 +1,8 @@
+*SVN*
+
+* Correct empty response handling.  #10445 [seangeo]
+
+
 *2.0.1* (December 7th, 2007)
 
 * Don't cache net/http object so that ActiveResource is more thread-safe.  Closes #10142 [kou]
